--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,6 @@ rpath = false
 lto = false
 debug-assertions = true
 codegen-units = 16
-panic = 'unwind'
 incremental = true
 overflow-checks = true
 
@@ -47,7 +46,6 @@ rpath = false
 lto = true
 debug-assertions = false
 codegen-units = 16
-panic = 'unwind'
 incremental = false
 overflow-checks = false
 
@@ -55,3 +53,8 @@ overflow-checks = false
 # Package dependencies
 
 [dependencies]
+serde = { version = ">= 1.0", features = ["derive"] }
+serde_json = ">= 1.0"
+serde_repr = ">= 0.1"
+chrono = { version = ">= 0.4", features = ["serde"] }
+uuid = { version = ">= 0.7", features = ["serde", "v4"] }
